REFACTOR - Game and game details
- Se refactorizaron los composables para games y game details screens, separando en mini componentes cada apatarado de las pantallas.

- Se cambió el color y animación para el snackbar de game screen.

- Se renombraron composables a unos más entendibles.

- Se implementó la lógica para cambiar el tema claro/oscuro en el perfil, creando el modal bottom sheet y guardando la selección del tema en data store.

- Se implementó la lógica para guardar y obtener el tema preferido del usuario en data store.

- Se separaron los mappers de los modelos de game details a archivos separados.

- Se cambiaron colores del floating action button de game screen y el pull refresh

- Se modificó la lógica para obtener qué tema se tiene en el dispositivo así como también para setear ese valor al archivo de Theme y pueda elegir el claro u oscuro.

- Se agregaron animaciones a los elementos de game screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,10 @@
     <string name="profile_title">MY PROFILE</string>
     <string name="profile_btn_edit_profile">EDIT PROFILE</string>
     <string name="profile_btn_logout">LOGOUT</string>
+    <string name="profile_update_theme">Theme</string>
+    <string name="profile_modal_bottom_sheet_title">Choose your theme</string>
+    <string name="profile_modal_bottom_sheet_btn_accept">Accept</string>
+    <string name="profile_modal_bottom_sheet_btn_cancel">Cancel</string>
 
     <string name="edit_profile_title">EDIT PROFILE</string>
     <string name="edit_profile_btn_save">SAVE</string>
